<resources>
    <string name="app_name">Juice</string>

    // App related strings
    <string name="amain_navigation_profile">Profile</string>
    <string name="amain_navigation_questions">My Questions</string>
    <string name="amain_navigation_log_out">Log Out</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <array name="drawer_list">
        <item>Profile</item>
        <item>My Questions</item>
        <item>Log Out</item>
    </array>
    <string name="facebook_app_id">448377858679198</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question_input_dialog_question_text">What\'s on your mind?</string>
    <string name="question_input_dialog_question_pos_text">Haan</string>
    <string name="question_input_dialog_question_neg_text">Naa</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="select_image">Select Image</string>
    <string name="get_image_tag">get_image</string>
    <string name="questions_input_tag">question_input</string>
    <string name="get_video_tag">get_video</string>
    <string name="activity_login_auth_token">get token</string>
    <string name="google_api_client">google_api_client</string>
    <string name="google_api_client_file">google_api_client_file</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
</resources>
