<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/question_input_dialog_question_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/question_input_dialog_question_text"
        android:maxLength="140"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/question_input_dialog_question_pos_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/question_input_dialog_question_pos_text"
        android:maxLength="10"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/question_input_dialog_question_neg_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/question_input_dialog_question_neg_text"
        android:maxLength="10"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/question_input_dialog_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/BASE"
            android:text="@string/ok" />

        <Button
            android:id="@+id/question_input_dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/BASE"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>