<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/amain_navigation_menu_profile"
            android:checked="true"
            android:icon="@mipmap/ic_account_circle_black_24dp"
            android:title="@string/amain_navigation_profile" />

        <item
            android:id="@+id/amain_navigation_menu_questions"
            android:checked="true"
            android:icon="@mipmap/ic_question_answer_black_24dp"
            android:title="@string/amain_navigation_questions" />

        <item
            android:id="@+id/amain_navigation_menu_log_out"
            android:checked="true"
            android:icon="@mipmap/ic_exit_to_app_black_24dp"
            android:title="@string/amain_navigation_log_out" />
    </group>

</menu>